# iconick-mcp

./: CHANGELOG.md  COMPLETE_STATUS.md  CONTRIBUTING.md  DEPLOYMENT.md  ENHANCEMENTS_SUMMARY.md  EXPANSION_STATUS.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_GUIDE.md  MCP_BEST_PRACTICES.md  PROJECT_SUMMARY.md  README.md  RESOURCES.md  add_all_enhancements.py  add_phase1_enhancements.py  advanced_features.py  advanced_server.py  blog-post.md  create_snippet_library.py  enhancements.py  fixed_server.py  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  server_with_homepage.py  simple_server_with_homepage.py  tools_phase2.txt  wordpress_mcp.py  wordpress_mcp.py.backup  wordpress_mcp_with_homepage.py
resources/: catalog.md
resources/advanced/: ajax-development.md  custom-post-types.md  meta-boxes.md  multisite-development.md  performance-optimization.md  taxonomies.md  woocommerce-development.md  wordpress-cron.md  wordpress-hooks.md
resources/blocks/: block-patterns.md  block-registration.md  block-transforms.md  components.md  dynamic-blocks.md  innerblocks.md  wordpress-packages.md
resources/core/: database.md  filesystem.md  http.md  metadata.md  options.md  rewrite.md  settings.md  shortcode.md  transients.md
resources/ecosystem/: industry-tools.md  marketplace-resources.md  plugin-ecosystem.md  theme-ecosystem.md  wordpress-community.md
resources/examples/: custom-post-types.md
resources/frameworks/: sage-framework.md  timber-framework.md  underscores-framework.md
resources/hooks/: actions.md
resources/hosting/: deployment-strategies.md  monitoring-logging.md  (+3 more)
scripts/: generate_core_apis.py  generate_initial_resources.py  generate_standards.py  update_resources.py
static/: index.html
tools/: backup_tool.py  database_manager.py  plugin_manager.py  theme_customizer.py  wordpress_installer.py
(+106 files in other folders)
